mudanças no html e alguns elementos css

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
           <div class="card-body">
             <h3 class="nome">Conjunto jardineira jeans com manga longa</h3>
             <input type="checkbox" id="btn" />
-            <section class="paleta">
-              <div class="box red"></div>
-              <div class="box lilac"></div>
-              <div class="box black"></div>
-            </section>
+            <div class="paleta">
+              <button class="box red"></button>
+              <button class="box lilac"></button>
+              <button class="box black"></button>
+            </div>
           </div>
         </div>
         <div class="card conjunto2">
@@ -48,17 +48,24 @@
           </div>
           <div class="card-body">
             <h3 class="nome">Conjunto xadrez com colete e saia</h3>
+            <div class="paleta">
+              <button class="box red"></button>
+              <button class="box lilac"></button>
+              <button class="box black"></button>
+            </div>
           </div>
         </div>
         <div class="card conjunto3">
           <div class="card-header">
             <img src="./imagens/conjunto3.jpg" alt="roupa de menina" />
-            <img src="./imagens/conjunto3.1.jpg" alt="roupa de menina" />
-            <img src="./imagens/conjunto3.2.jpg" alt="roupa de menina" />
-            <img src="./imagens/conjunto3.3.jpg" alt="roupa de menina" />
           </div>
           <div class="card-body">
             <h3 class="nome">Conjunto short jeans e top cropped com cinto</h3>
+            <div class="paleta">
+              <button class="box red"></button>
+              <button class="box lilac"></button>
+              <button class="box black"></button>
+            </div>
           </div>
         </div>
       </div>
