--- a/index.html
+++ b/index.html
@@ -36,11 +36,15 @@
                   <h3 class="nome">Conjunto jardineira jeans com manga longa</h3>
                   <input type="checkbox" id="btn" />
                   <div class="paleta">
-                    <button class="box red"></button>
-                    <button class="box lilac"></button>
-                    <button class="box black"></button>
+                    <button class="box red" title="vermelho"></button>
+                    <button class="box lilac" title="lilás"></button>
+                    <button class="box black" title="preto"></button>
                   </div>
               </div>
+              <span class="tamanho"><a href="wa.me/5581993046246">
+                Consultar tamanhos
+              </a>
+            </span>
             </div>
           <div class="card conjunto2">
               <div class="card-header">
@@ -49,11 +53,17 @@
               <div class="card-body">
                 <h3 class="nome">Conjunto xadrez com colete e saia</h3>
                   <div class="paleta">
-                    <button class="box red"></button>
-                    <button class="box lilac"></button>
-                    <button class="box black"></button>
+                    <button class="box red" title="vermelho"></button>
+                    <button class="box pink" title="pink"></button>
+                    <button class="box black" title="preto"></button>
+                    <button class="box orange" title="laranja"></button>
+                    <button class="box white" title="branco"></button>
                 </div>
              </div>
+             <span class="tamanho"><a href="wa.me/5581993046246">
+              Consultar tamanhos
+            </a>
+          </span>          
           </div>
           <div class="card conjunto3">
               <div class="card-header">
@@ -62,11 +72,15 @@
               <div class="card-body">
                   <h3 class="nome">Conjunto short jeans e top cropped com cinto</h3>
                   <div class="paleta">
-                    <button class="box red"></button>
-                    <button class="box lilac"></button>
-                    <button class="box black"></button>
+                    <button class="box red" title="vermelho"></button>
+                    <button class="box blue" title="azul marinho"></button>
+                    <button class="box pink" title="pink"></button>
+                    <button class="box rose" title="rosa claro"></button>
                   </div>
               </div>
+              <span class="tamanho"> <a href="wa.me/5581993046246">
+                Consultar tamanhos
+              </a></span>
           </div>
         </div>
     </main>
